# quant-finance-fundamentals

./: .gitignore  README.md  basic-polynomial-regression.py  historical-prices-and-returns.py  main.py  pyproject.toml  requirements.txt  sample-iex-finance-api-call.py  time-series-multiple-stocks.py  timeseries-function.py
